--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,12 @@ src: url('entypo-social.ttf'),
 
 /* Toast Framework - type.css */
 body {
-	font: 1.2em/1.5 Bariol-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 16px/1.5 Bariol-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	background-color: #fff;
 	color: #64627C;
 	-webkit-font-smoothing: antialiased; 
+	padding: 0;
+	margin: 0;
 }
 
 p {
@@ -176,6 +178,7 @@ a:hover {
 
 .hero {
 	background-color: #fafafc;
+	width: 100%;
 	height: 500px;
 	text-align: left;
 }
@@ -210,7 +213,7 @@ a:hover {
 }
 
 .copy {
-	width: 1000px;
+
 }
 
 a.purchase-button {
@@ -235,8 +238,68 @@ a:hover.purchase-button {
 	opacity: .8;
 }
 
-#chapters-row-2 {
-	margin-top: 2em;
+.sample-container {
+	vertical-align: top;
+}
+
+.sample-headline {
+	background-color: #95CEDF;
+	margin-right: 0;
+	width: 40%;
+	min-height: 550px;
+	display: inline-block;
+	float:left;
+}
+
+.sample-headline h4 {
+	color: #7FB9CB; 
+	font-family: Bariol-Bold; 
+	font-size: .8em; 
+	letter-spacing: .5px; 
+	text-align: left; 
+	text-transform: uppercase; 
+	width: 140px;
+	padding: 0 10% 0 10%;
+	margin-top: 80px;
+}
+
+.sample-headline h1 {
+	font-size: 5em !important;
+	padding: 0 10% 0 10%;
+	margin: 0;
+}
+
+.sample-copy {
+	font-family: Bariol-Serif-Regular; 
+	font-size: 1.3em;
+	text-align: left; 
+	background-color: #F4F8FA; 
+	margin: 0; 
+	width: 60%;
+	min-height: 550px;
+	display: inline-block;
+}
+
+.sample-copy-container {
+	padding: 0 10% 0 8%;
+	margin: 80px 0 80px 0;
+}
+
+.sample-copy p {
+	margin-top: 0;
+	margin-bottom: 1em;
+}
+
+.quotes {
+	text-align: center;
+	width: 100%;
+}
+
+.quote {
+	background-color: red;
+	width: 33%;
+	display: inline-block;
+	min-height: 400px;
 }
 
 .subscribe {
