--- a/css/style.css
+++ b/css/style.css
@@ -189,30 +189,49 @@ a:hover {
 
 .hero {
 	background-color: #fafafc;
+	background-image: url("../images/bg.svg");
+	background-repeat: no-repeat;
+	background-position: center center;
 	width: 100%;
-	height: 500px;
+	height: 490px;
 	text-align: left;
+	padding-top: 3em;
 	display: flex;
 	align-items: center; /* align vertical */
 }
 
+.cover {
+	width: 50%;
+	display: inline-block;
+	text-align: right;
+	overflow: hidden;
+}
+
+.copy {
+	width: 50%;
+	text-align: left;
+	display: inline-block;
+	float: left;
+	margin-left: 3em;
+}
+
 .hero h1 {
 	color: #64627C;
-	font-size: 5em;
+	font-size: 4em;
 	letter-spacing: -1px;
 	line-height: 1.1em;
-	margin: 0 0 0 600px;
+	margin: 0;
 	text-align: left;
 }
 
 .hero h2 {
 	font-family: Bariol-Serif-Regular;
 	color: #A2A1B0;
-	font-size: 1.5em;
+	font-size: 1.4em;
 	line-height: 1.4;
-	margin-left: 600px;
 	margin-top: .2em;
-	margin-bottom: 1.2em;
+	margin-bottom: 1.4em;
+	padding-right: 4em;
 	text-align: left;
 }
 
@@ -222,25 +241,19 @@ a:hover {
 	list-style: none;
 }
 
-.copy {
-	
-}
-
 a.purchase-button {
 	font-family: Bariol-Bold;
 	font-size: 1.4em;
 	line-height: 1em;
 	color: #fff;
 	background-color: #BCD5A2;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	-khtml-border-radius: 4px;
-	border-radius: 4px;
-	padding: 12px 17px 10px 17px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-khtml-border-radius: 6px;
+	border-radius: 6px;
+	padding: .7em .9em .7em .9em;
 	text-decoration: none;
-	z-index:1000;
 	text-align: center;
-	margin-left: 600px;
 	margin-bottom: .5em;
 }
 
@@ -250,7 +263,7 @@ a:hover.purchase-button {
 
 .chapters {
 	text-align: center;
-	height: 480px;
+	height: 430px;
 }
 
 .chapters h3 {
@@ -283,7 +296,7 @@ a:hover.purchase-button {
 
 .sample-container {
 	vertical-align: top;
-	height: 550px;
+	height: 370px;
 }
 
 .sample-headline {
@@ -303,14 +316,19 @@ a:hover.purchase-button {
 	letter-spacing: .5px; 
 	text-align: left; 
 	text-transform: uppercase; 
-	padding: 0 10% 0 10%;
+	padding: 0 50px 0 55px;
 	margin-top: 60px;
+}
+
+.sample-headline h4 span {
+	padding-bottom: .3em;
+	border-bottom: 3px solid #7FB9CB;
 }
 
 .sample-headline h1 {
 	font-size: 5em !important;
-	padding: 0 10% 0 10%;
-	margin: 0;
+	padding: 0 50px 0 50px;
+	margin: .4em 0 0 0;
 }
 
 .sample-copy {
@@ -354,7 +372,8 @@ a:hover.purchase-button {
 
 .quote h3 {
 	font-family: Bariol-Serif-Bold;
-	font-size: 2em;
+	font-size: 1.8em;
+	line-height: 1.6em;
 	color: #fff;
 	text-align: center;
 	padding: 1em;
@@ -362,8 +381,12 @@ a:hover.purchase-button {
 }
 
 .quote h3 span {
-	background-color: #3fbf7f;
-	padding: .2em .5em .2em .5em;
+	color: #fff; 
+	background-color: #BCD5A2;
+	padding: .2em;
+	-webkit-box-shadow: 0.5em 0px 0px #BCD5A2, -0.5em 0px 0px #BCD5A2;
+	box-shadow: 0.5em 0px 0px #BCD5A2, -0.5em 0px 0px #BCD5A2;
+	box-decoration-break: clone;
 }
 
 .subscribe {
@@ -474,8 +497,16 @@ img.about {
 	text-align: center;
 }
 
-.footer p {
+.footnote {
 	width: 100%;
+	display: inline-block;
+	padding-left: 0;
+	padding-right: 0;
+	text-align: center;
+}
+
+.footer p {
+	width: 60%;
 	font-size: .8em;
 	text-align: center;
 	display: inline-block;
@@ -589,13 +620,13 @@ img.about {
   	letter-spacing: .5px; 
   	text-align: left; 
   	text-transform: uppercase; 
-  	padding: 0 10% 0 10%;
+  	padding: 0 30px 0 30px;
   	margin-top: 30px;
   }
   
   .sample-headline h1 {
   	font-size: 3.5em !important;
-  	padding: 0 10% 0 10%;
+  	padding: 0 30px 0 30px;
   	margin: 0;
   }
   
@@ -648,7 +679,6 @@ img.about {
   }
   
   .footer {
-  	padding: 0 30px 0 30px;
   	display: block;
   	float: left;
   	margin: 1em ;
