--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,63 @@
 /* first for IE 4–8 */
 @font-face {
   font-family: Bariol-Regular;
-  src: url("bariol_regular-webfont.eot");
+  src: url("assets/bariol_regular-webfont.eot");
 }
 
 /* then for WOFF-capable browsers */
 @font-face {
   font-family: Bariol-Regular;
-  src: url("bariol_regular-webfont.woff") format("woff");
+  src: url("assets/bariol_regular-webfont.woff") format("woff");
 }
 
 /* first for IE 4–8 */
 @font-face {
   font-family: Bariol-Bold;
-  src: url("bariol_bold-webfont.eot");
+  src: url("assets/bariol_bold-webfont.eot");
 }
 
 /* then for WOFF-capable browsers */
 @font-face {
   font-family: Bariol-Bold;
-  src: url("bariol_bold-webfont.woff") format("woff");
+  src: url("assets/bariol_bold-webfont.woff") format("woff");
 }
 
 /* first for IE 4–8 */
 @font-face {
   font-family: Bariol-Serif-Regular;
-  src: url("bariol_serif_regular-webfont.eot");
+  src: url("assets/bariol_serif_regular-webfont.eot");
 }
 
 /* then for WOFF-capable browsers */
 @font-face {
   font-family: Bariol-Serif-Regular;
-  src: url("bariol_serif_regular-webfont.woff") format("woff");
+  src: url("assets/bariol_serif_regular-webfont.woff") format("woff");
 }
 
 /* first for IE 4–8 */
 @font-face {
   font-family: Bariol-Serif-Bold;
-  src: url("bariol_serif_bold-webfont.eot");
+  src: url("assets/bariol_serif_bold-webfont.eot");
 }
 
 /* then for WOFF-capable browsers */
 @font-face {
   font-family: Bariol-Serif-Bold;
-  src: url("bariol_serif_bold-webfont.woff") format("woff");
+  src: url("assets/bariol_serif_bold-webfont.woff") format("woff");
 }
 
 @font-face {
 font-family: entypo;
-src: url('entypo.ttf'),
-     url('entypo.eot'); /* IE9 */
--webkit-font-smoothing: antialiased; 
+src: url('assets/entypo.ttf'),
+     url('assets/entypo.eot'); /* IE9 */
+-webkit-font-smoothing: antialiased;
 }
 
 @font-face {
 font-family: entypo-social;
-src: url('entypo-social.ttf'),
-     url('entypo-social.eot'); /* IE9 */
--webkit-font-smoothing: antialiased; 
+src: url('assets/entypo-social.ttf'),
+     url('assets/entypo-social.eot'); /* IE9 */
+-webkit-font-smoothing: antialiased;
 }
 
 /* Toast Framework - type.css */
@@ -65,7 +65,7 @@ body {
 	font: 16px/1.5 Bariol-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	background-color: #fff;
 	color: #64627C;
-	-webkit-font-smoothing: antialiased; 
+	-webkit-font-smoothing: antialiased;
 	padding: 0;
 	margin: 0;
 }
@@ -85,7 +85,7 @@ strong {
 
 h1, h2, h3, h4, h5, h6 {
 	color: #64627C;
-	-webkit-font-smoothing: antialiased; 
+	-webkit-font-smoothing: antialiased;
 	text-align: center;
 	font-weight: normal;
 }
@@ -189,7 +189,7 @@ a:hover {
 
 .hero {
 	background-color: #fafafc;
-	background-image: url("../images/bg.svg");
+	background-image: url("assets/images/bg.svg");
 	background-repeat: no-repeat;
 	background-position: center center;
 	width: 100%;
@@ -310,12 +310,12 @@ a:hover.purchase-button {
 }
 
 .sample-headline h4 {
-	color: #7FB9CB; 
-	font-family: Bariol-Bold; 
-	font-size: 1em; 
-	letter-spacing: .5px; 
-	text-align: left; 
-	text-transform: uppercase; 
+	color: #7FB9CB;
+	font-family: Bariol-Bold;
+	font-size: 1em;
+	letter-spacing: .5px;
+	text-align: left;
+	text-transform: uppercase;
 	padding: 0 50px 0 55px;
 	margin-top: 60px;
 }
@@ -332,11 +332,11 @@ a:hover.purchase-button {
 }
 
 .sample-copy {
-	font-family: Bariol-Serif-Regular; 
+	font-family: Bariol-Serif-Regular;
 	font-size: 1.3em;
-	text-align: left; 
-	background-color: #F4F8FA; 
-	margin: 0; 
+	text-align: left;
+	background-color: #F4F8FA;
+	margin: 0;
 	width: 60%;
 	min-height: 100%;
 	display: inline-block;
@@ -381,7 +381,7 @@ a:hover.purchase-button {
 }
 
 .quote h3 span {
-	color: #fff; 
+	color: #fff;
 	background-color: #BCD5A2;
 	padding: .2em;
 	-webkit-box-shadow: 0.5em 0px 0px #BCD5A2, -0.5em 0px 0px #BCD5A2;
@@ -430,7 +430,7 @@ a:hover.purchase-button {
 	border-radius: 4px;
 	padding: 12px 17px 10px 17px;
 	text-decoration: none;
-	position: relative; 
+	position: relative;
 	z-index:1000;
 	display: inline-block;
 	margin-bottom: .5em;
@@ -455,7 +455,7 @@ a:hover.purchase-button {
 	padding: 12px 17px 10px 17px;
 	box-sizing: border-box;
 	text-decoration: none;
-	position: relative; 
+	position: relative;
 	z-index:1000;
 	display: inline-block;
 	text-align: center;
@@ -598,19 +598,19 @@ img.about {
 	margin-top: .5em;
 	display: block;
 	float: left;
-}	
+}
 
 }
 
 /* Mobile */
-@media (max-width: 640px) and (min-width: 481px) {  
-  
+@media (max-width: 640px) and (min-width: 481px) {
+
 
 }
 
 /* Mobile */
-@media (max-width: 480px) and (min-width: 321px) {  
-  
+@media (max-width: 480px) and (min-width: 321px) {
+
   .hero {
   	height: 323px;
   	padding-top: 2em;
@@ -618,25 +618,25 @@ img.about {
   	align-items: center;
   	text-align: center;
   }
-  
+
   .cover {
   	width: 100%;
   	text-align: center;
   	display: block;
   	overflow: hidden;
   }
-  
+
   .cover img {
   	width: 250px;
   }
-  
+
   .copy {
   	width: 100%;
   	text-align: center;
   	display: block;
   	margin-left: 0;
   }
-  
+
   .hero h1 {
   	font-size: 3em;
   	text-align: center;
@@ -644,7 +644,7 @@ img.about {
   	padding: 0 30px 0 30px;
   	margin: .4em 0 0 0;
   }
-  
+
   .hero h2 {
   	font-size: 1.2em;
   	line-height: 1.4;
@@ -652,7 +652,7 @@ img.about {
   	padding: 0 30px 0 30px;
   	margin: .4em 0 0 0;
   }
-  
+
   a.purchase-button {
   	width: 80%;
   	font-size: 1.4em;
@@ -661,7 +661,7 @@ img.about {
   	margin-left: 0;
   	display: inline-block;
   }
-  
+
   .chapters {
   	text-align: center;
   	width: 100%;
@@ -669,28 +669,28 @@ img.about {
   	display: block;
   	float: left;
   }
-  
+
   .chapters h3 {
   	font-size: 1.2em;
   	padding: 0 11% 0 11%;
   }
-  
+
   .chapters ul {
   	display: inline-block;
   	margin-top: 0;
   	padding: 0;
   }
-  
+
   .chapters li {
   	padding: 0 10px 0 10px;
   	margin: 0 1.3em 3em 1.3em;
   }
-  
+
   .sample-container {
   	vertical-align: top;
   	height: 226px;
   }
-  
+
   .sample-headline {
   	background-color: #95CEDF;
   	margin-right: 0;
@@ -698,52 +698,52 @@ img.about {
   	min-height: 100%;
   	display: block;
   }
-  
+
   .sample-headline h4 {
-  	color: #7FB9CB; 
-  	font-family: Bariol-Bold; 
-  	font-size: 1em; 
-  	letter-spacing: .5px; 
-  	text-align: left; 
-  	text-transform: uppercase; 
+  	color: #7FB9CB;
+  	font-family: Bariol-Bold;
+  	font-size: 1em;
+  	letter-spacing: .5px;
+  	text-align: left;
+  	text-transform: uppercase;
   	padding: 0 30px 0 30px;
   	margin-top: 30px;
   }
-  
+
   .sample-headline h1 {
   	font-size: 3.5em !important;
   	padding: 0 30px 0 30px;
   	margin: 0;
   }
-  
+
   .sample-copy {
-  	font-family: Bariol-Serif-Regular; 
+  	font-family: Bariol-Serif-Regular;
   	font-size: 1.2em;
-  	text-align: left; 
-  	background-color: #F4F8FA; 
-  	margin: 0; 
+  	text-align: left;
+  	background-color: #F4F8FA;
+  	margin: 0;
   	width: 100%;
   	display: block;
   	float: left;
   }
-  
+
   .sample-copy-container {
   	padding: 0 10% 0 8%;
   	margin: 30px 0 60px 0;
   }
-  
+
   .sample-copy p {
   	margin-top: 0;
   	margin-bottom: 1em;
   }
-  
+
   .quotes {
   	text-align: center;
   	width: 100%;
   	height: 250px;
   	margin-top: .5em;
   }
-  
+
   .quote {
   	text-align: center;
   	background-color: #f1cfcf;
@@ -754,7 +754,7 @@ img.about {
   	justify-content: center; /* align horizontal */
   	align-items: center; /* align vertical */
   }
-  
+
   .quote h3 {
   	font-family: Bariol-Serif-Bold;
   	font-size: 1.6em;
@@ -763,13 +763,13 @@ img.about {
   	padding: 1.4em;
   	margin-bottom: 0;
   }
-  
+
   .footer {
   	display: block;
   	float: left;
   	margin: 1em ;
   }
-  
+
   .footer p {
   	width: 100%;
   	font-size: .8em;
@@ -777,11 +777,11 @@ img.about {
   	display: inline-block;
   	margin-bottom: .5em;
   }
-  
+
 }
 
 /* Mobile */
-@media (max-width: 320px) and (min-width: 0px) { 
+@media (max-width: 320px) and (min-width: 0px) {
 
 .hero {
 	height: 323px;
@@ -872,12 +872,12 @@ a.purchase-button {
 }
 
 .sample-headline h4 {
-	color: #7FB9CB; 
-	font-family: Bariol-Bold; 
-	font-size: 1em; 
-	letter-spacing: .5px; 
-	text-align: left; 
-	text-transform: uppercase; 
+	color: #7FB9CB;
+	font-family: Bariol-Bold;
+	font-size: 1em;
+	letter-spacing: .5px;
+	text-align: left;
+	text-transform: uppercase;
 	padding: 0 30px 0 30px;
 	margin-top: 30px;
 }
@@ -889,11 +889,11 @@ a.purchase-button {
 }
 
 .sample-copy {
-	font-family: Bariol-Serif-Regular; 
+	font-family: Bariol-Serif-Regular;
 	font-size: 1.2em;
-	text-align: left; 
-	background-color: #F4F8FA; 
-	margin: 0; 
+	text-align: left;
+	background-color: #F4F8FA;
+	margin: 0;
 	width: 100%;
 	display: block;
 	float: left;
@@ -958,6 +958,6 @@ img.about {
 	text-align: center;
 	display: inline-block;
 	margin-bottom: .5em;
-}	
-  
+}
+
 }
