--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ p {
 	margin-bottom: 1.5em;
 	font-weight: normal;
 }
-
+/* what font is this referencing? */
 strong {
 	font-family: KievitWebPro-Bold;
 	font-weight: normal;
@@ -110,7 +110,7 @@ h3 {
 h4 {
 	font-size: 1.2em;
 	line-height: 1.5em;
-  
+
 }
 h5 {
     font-size: 1.125em;
@@ -417,7 +417,7 @@ a:hover.purchase-button {
 
 .mc-field-group input {
 	font-size: .9em;
-	font-family: KievitWebPro-Bold !important;
+	font-family: KievitWebPro-Bold !important; /* what font is this referencing? */
 	font-weight: normal !important;
 	line-height: 1em;
 	/* background-color: #42459d; */
