--- a/style/sass/_oldstyle.scss
+++ b/style/sass/_oldstyle.scss
@@ -1,130 +1,3 @@
-/* Toast Framework - type.css */
-body {
-	font: 16px/1.5 Bariol-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	background-color: #fff;
-	color: #64627C;
-	-webkit-font-smoothing: antialiased;
-	padding: 0;
-	margin: 0;
-}
-
-p {
-	font-size: 1em;
-	line-height: 1.5em;
-	color: #69717b;
-	margin-bottom: 1.5em;
-	font-weight: normal;
-}
-
-strong {
-	font-family: KievitWebPro-Bold;
-	font-weight: normal;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	color: #64627C;
-	-webkit-font-smoothing: antialiased;
-	text-align: center;
-	font-weight: normal;
-}
-
-h1 {
-    font-size: 2.4em;
-    line-height: 1em;
-    margin-bottom: .5em;
-}
-h2 {
-    font-size: 2em;
-    line-height: 1.3em;
-    margin-top: 1.5em;
-    margin-bottom: .3em;
-}
-h3 {
-    font-size: 1.1em;
-   	color: #A2A1B0;
-    line-height: 1.4em;
-    -webkit-margin-before: 0;
-}
-h4 {
-	font-size: 1.2em;
-	line-height: 1.5em;
-
-}
-h5 {
-    font-size: 1.125em;
-    line-height: 1.6em;
-    margin-bottom: 1.5em;
-    text-align: left;
-}
-h6 {
-    font-size: 1em;
-    font-weight: normal;
-    line-height: 1.2em;
-    margin-top: 1.4em;
-    margin-bottom: .7em;
-    color: #42459d; /* #818c97; */
-    text-align: center;
-}
-ul, ol, dl, blockquote {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-ul, li {
-	color: #697480;
-	list-style: disc;
-	line-height: 1.5em;
-	list-style-position: inside;
-	-webkit-font-smoothing: antialiased;
-}
-
-a, a:visited {
-	color: #697480;
-	text-decoration: underline;
-}
-
-a:hover {
-	opacity: 0.7;
-	text-decoration: none;
-}
-
-.fb {
-	width: 130px;
-	padding-top: 7px;
-}
-
-.twitter-share-button {
-	margin-right: 5px;
-}
-
-.entypo {
-	font-family: entypo;
-}
-
-.social {
-	width: 100%;
-	text-align: right;
-	position: fixed;
-	margin-right: 0;
-	padding-right: 20px;
-}
-
-.price-tag {
-	font-size: 2em;
-	line-height: 1em;
-	text-align: center;
-	position: absolute;
-	top: 17px;
-	left: 277px;
-	color: #fff;
-	background-color: #F4B400;
-	-moz-border-radius: 600px;
-	-webkit-border-radius: 600px;
-	-khtml-border-radius: 600px;
-	border-radius: 600px;
-	padding: 24px 23px 22px 23px;
-}
-
 .hero {
 	background-color: #fafafc;
   background-image: url("../assets/images/bg.svg");
@@ -154,7 +27,7 @@ a:hover {
 }
 
 .hero h1 {
-	color: #64627C;
+	color: $purple;
 	font-size: 4em;
 	letter-spacing: -1px;
 	line-height: 1.1em;
@@ -164,7 +37,7 @@ a:hover {
 
 .hero h2 {
 	font-family: Bariol-Serif-Regular;
-	color: #A2A1B0;
+	color: $light-gray;
 	font-size: 1.4em;
 	line-height: 1.4;
 	margin-top: .2em;
@@ -174,7 +47,7 @@ a:hover {
 }
 
 .hero ul,li {
-	color: #fff;
+	color: $white;
 	margin-top: 0;
 	list-style: none;
 }
@@ -183,7 +56,7 @@ a.purchase-button {
 	font-family: Bariol-Bold;
 	font-size: 1.4em;
 	line-height: 1em;
-	color: #fff;
+	color: $white;
 	background-color: #BCD5A2;
 	-moz-border-radius: 6px;
 	-webkit-border-radius: 6px;
@@ -249,7 +122,7 @@ a:hover.purchase-button {
 
 .sample-headline h2 {
   font-size: 5em;
-  color: #fff;
+  color: $white;
   margin: 0 0 0 0.6em;
   text-align: left;
 }
@@ -326,7 +199,7 @@ a:hover.purchase-button {
 }
 
 .quote h3 span {
-	color: #fff;
+	color: $white;
 	background-color: #BCD5A2;
 	padding: .2em;
 	-webkit-box-shadow: 0.5em 0px 0px #BCD5A2, -0.5em 0px 0px #BCD5A2;
@@ -365,7 +238,7 @@ a:hover.purchase-button {
 	font-family: KievitWebPro-Bold !important;
 	font-weight: normal !important;
 	line-height: 1em;
-	/* background-color: #42459d; */
+	/* background-color: $blue-violet; */
 	color: #818c97;
 	background-color: #fafafa;
 	border: 2px solid #818c97;
@@ -389,10 +262,10 @@ a:hover.purchase-button {
 	font-size: .9em;
 	font-weight: normal;
 	line-height: 1em;
-	/* background-color: #42459d; */
-	color: #42459d;
+	/* background-color: $blue-violet; */
+	color: $blue-violet;
 	background-color: #fafafa;
-	border: 2px solid #42459d;
+	border: 2px solid $blue-violet;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	-khtml-border-radius: 4px;
@@ -700,7 +573,7 @@ img.about {
   .quote h3 {
   	font-family: Bariol-Serif-Bold;
   	font-size: 1.6em;
-  	color: #fff;
+  	color: $white;
   	text-align: center;
   	padding: 1.4em;
   	margin-bottom: 0;
@@ -870,7 +743,7 @@ img.about {
   .quote h3 {
   	font-family: Bariol-Serif-Bold;
   	font-size: 1.6em;
-  	color: #fff;
+  	color: $white;
   	text-align: center;
   	padding: 1.4em;
   	margin-bottom: 0;
