Create partial for homepage and move hero styling to it, add variables

--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -4,8 +4,11 @@ $blue-violet: #42459D;
 $gray: #69717b;
 $dark-gray: #697480;
 $light-gray: #A2A1B0;
+$warm-gray: #fafafc;
 $white: #FFFFFF;
 
 // Fonts
 $sans-serif: 'Bariol-Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$bold-sans-serif: 'KievitWebPro-Bold';
+$bold-sans-serif: 'Bariol-Bold';
+$specialty-bold: 'KievitWebPro-Bold';
+$serif: 'Bariol-Serif-Regular';
