--- a/style/sass/_oldstyle.scss
+++ b/style/sass/_oldstyle.scss
@@ -1,110 +1,3 @@
-.hero {
-	background-color: #fafafc;
-  background-image: url("../assets/images/bg.svg");
-	background-repeat: no-repeat;
-	background-position: center center;
-	width: 100%;
-	height: 490px;
-	text-align: left;
-	padding-top: 3em;
-	display: flex;
-	align-items: center; /* align vertical */
-}
-
-.cover {
-	width: 50%;
-	display: inline-block;
-	text-align: right;
-	overflow: hidden;
-}
-
-.copy {
-	width: 50%;
-	text-align: left;
-	display: inline-block;
-	float: left;
-	margin-left: 3em;
-}
-
-.hero h1 {
-	color: $purple;
-	font-size: 4em;
-	letter-spacing: -1px;
-	line-height: 1.1em;
-	margin: 0;
-	text-align: left;
-}
-
-.hero h2 {
-	font-family: Bariol-Serif-Regular;
-	color: $light-gray;
-	font-size: 1.4em;
-	line-height: 1.4;
-	margin-top: .2em;
-	margin-bottom: 1.4em;
-	padding-right: 4em;
-	text-align: left;
-}
-
-.hero ul,li {
-	color: $white;
-	margin-top: 0;
-	list-style: none;
-}
-
-a.purchase-button {
-	font-family: Bariol-Bold;
-	font-size: 1.4em;
-	line-height: 1em;
-	color: $white;
-	background-color: #BCD5A2;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	-khtml-border-radius: 6px;
-	border-radius: 6px;
-	padding: .7em .9em .7em .9em;
-	text-decoration: none;
-	text-align: center;
-	margin-bottom: .5em;
-}
-
-a:hover.purchase-button {
-	opacity: .8;
-}
-
-.chapters {
-	text-align: center;
-	height: 430px;
-}
-
-.chapters h3 {
-	font-size: 1.3em;
-	padding: 0 30% 0 30%;
-	margin-bottom: 2em;
-}
-
-.chapters ul {
-	width: 100%;
-	display: inline-block;
-	list-style-type: none;
-	float: left;
-	margin-top: 0;
-	padding: 0;
-}
-
-.chapters li {
-	vertical-align: top;
-	display: inline-block;
-	padding: 0 10px 0 10px;
-	margin: 0 2em 4em 2em;
-}
-
-.chapters li img {
-	display: block;
-	text-align: center;
-	margin: 0;
-}
-
 .sample-container {
 	vertical-align: top;
 	height: 370px;
@@ -150,7 +43,7 @@ a:hover.purchase-button {
 }
 
 .sample-copy {
-	font-family: Bariol-Serif-Regular;
+	font-family: serif;
 	font-size: 1.3em;
 	text-align: left;
 	background-color: #F4F8FA;
@@ -532,7 +425,7 @@ img.about {
   }
 
   .sample-copy {
-  	font-family: Bariol-Serif-Regular;
+  	font-family: serif;
   	font-size: 1.2em;
   	text-align: left;
   	background-color: #F4F8FA;
@@ -702,7 +595,7 @@ img.about {
   }
 
   .sample-copy {
-  	font-family: Bariol-Serif-Regular;
+  	font-family: serif;
   	font-size: 1.2em;
   	text-align: left;
   	background-color: #F4F8FA;
