--- a/style/sass/base.scss
+++ b/style/sass/base.scss
@@ -4,6 +4,7 @@
 @import "animation";
 @import "variables";
 @import "typography";
+@import "homepage"; // stylesheet for Hero portion, could be moved to a homepage only stylesheet
 @import "oldstyle"; // will be removed once everything's been separated out
 
 // Base styles
