--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -1,6 +1,8 @@
 // Colors
 $purple: #64627C;
 $blue-violet: #42459D;
+$baby-blue: #95CEDF;
+$dark-baby-blue: #7FB9CB;
 $gray: #69717b;
 $dark-gray: #697480;
 $light-gray: #A2A1B0;
