--- a/style/sass/_oldstyle.scss
+++ b/style/sass/_oldstyle.scss
@@ -1,69 +1,3 @@
-.sample-container {
-	vertical-align: top;
-	height: 370px;
-}
-
-.sample-headline {
-	background-color: #95CEDF;
-	margin-right: 0;
-	width: 40%;
-	min-height: 100%;
-	display: inline-block;
-	float:left;
-	overflow: hidden;
-}
-
-.sample-headline h2 {
-  font-size: 5em;
-  color: $white;
-  margin: 0 0 0 0.6em;
-  text-align: left;
-}
-
-.sample-headline h4 {
-	color: #7FB9CB;
-	font-family: Bariol-Bold;
-	font-size: 1em;
-	letter-spacing: .5px;
-	text-align: left;
-	text-transform: uppercase;
-	padding: 0 50px 0 55px;
-	margin-top: 60px;
-}
-
-.sample-headline h4 span {
-	padding-bottom: .3em;
-	border-bottom: 3px solid #7FB9CB;
-}
-
-.sample-headline h1 {
-	font-size: 5em !important;
-	padding: 0 50px 0 50px;
-	margin: .4em 0 0 0;
-}
-
-.sample-copy {
-	font-family: serif;
-	font-size: 1.3em;
-	text-align: left;
-	background-color: #F4F8FA;
-	margin: 0;
-	width: 60%;
-	min-height: 100%;
-	display: inline-block;
-}
-
-.sample-copy-container {
-	padding: 0 10% 0 8%;
-	margin: 60px 0 60px 0;
-}
-
-.sample-copy p {
-  color: #95CEDF;
-	margin-top: 0;
-	margin-bottom: 1em;
-}
-
 .quotes {
 	text-align: center;
 	width: 100%;
@@ -400,7 +334,7 @@ img.about {
   }
 
   .sample-headline {
-  	background-color: #95CEDF;
+  	background-color: $baby-blue;
   	margin-right: 0;
   	width: 100%;
   	min-height: 100%;
@@ -409,7 +343,7 @@ img.about {
 
   .sample-headline h4 {
   	color: #7FB9CB;
-  	font-family: Bariol-Bold;
+  	font-family: $bold-sans-serif;
   	font-size: 1em;
   	letter-spacing: .5px;
   	text-align: left;
@@ -570,7 +504,7 @@ img.about {
   }
 
   .sample-headline {
-  	background-color: #95CEDF;
+  	background-color: $baby-blue;
   	margin-right: 0;
   	width: 100%;
   	min-height: 100%;
@@ -579,7 +513,7 @@ img.about {
 
   .sample-headline h4 {
   	color: #7FB9CB;
-  	font-family: Bariol-Bold;
+  	font-family: $bold-sans-serif;
   	font-size: 1em;
   	letter-spacing: .5px;
   	text-align: left;
