--- a/style/sass/_homepage.scss
+++ b/style/sass/_homepage.scss
@@ -109,23 +109,23 @@ a:hover.purchase-button {
 // Sample section styling
 .sample-container {
 	vertical-align: top;
-	height: 370px; // TODO: fix height bug
+	height: 370px;
 }
 
 .sample-headline {
 	background-color: $baby-blue;
 	margin-right: 0;
 	width: 40%;
-	min-height: 100%;
+	height: 100%;
 	display: inline-block;
 	float: left;
 	overflow: hidden;
 }
 
 .sample-headline h2 {
-  font-size: 5em;
+  font-size: 4em;
   color: $white;
-  margin: 0 0 0 0.6em;
+  margin: 0 0 0 0.4em;
   text-align: left;
 }
 
@@ -136,19 +136,13 @@ a:hover.purchase-button {
 	letter-spacing: .5px;
 	text-align: left;
 	text-transform: uppercase;
-	padding: 0 50px 0 55px;
+	padding: 0 50px 0 55px; // TODO: change to match h2 so that they always align
 	margin-top: 60px;
 }
 
 .sample-headline h4 span {
 	padding-bottom: .3em;
 	border-bottom: 3px solid $dark-baby-blue;
-}
-
-.sample-headline h1 {
-	font-size: 5em !important;
-	padding: 0 50px 0 50px;
-	margin: .4em 0 0 0;
 }
 
 .sample-copy {
@@ -158,7 +152,7 @@ a:hover.purchase-button {
 	background-color: #F4F8FA;
 	margin: 0;
 	width: 60%;
-	min-height: 100%;
+	height: 100%;
 	display: inline-block;
 }
 
