Setup imports to shop.scss and remove styles that are in fonts partial

--- a/style/sass/shop.scss
+++ b/style/sass/shop.scss
@@ -1,84 +1,7 @@
-/* first for IE 4–8 */
-@font-face {
-  font-family: KievitWebPro-Black;
-  src: url("KievitWebPro-Black.eot");
-}
-
-/* then for WOFF-capable browsers */
-@font-face {
-  font-family: KievitWebPro-Black;
-  src: url("KievitWebPro-Black.woff") format("woff");
-}
-
-/* first for IE 4–8 */
-@font-face {
-  font-family: KievitWebPro-Bold;
-  src: url("KievitWebPro-Bold.eot");
-}
-
-/* then for WOFF-capable browsers */
-@font-face {
-  font-family: KievitWebPro-Bold;
-  src: url("KievitWebPro-Bold.woff") format("woff");
-}
-
-/* first for IE 4–8 */
-@font-face {
-  font-family: KievitWebPro;
-  src: url("KievitWebPro.eot");
-}
-
-/* then for WOFF-capable browsers */
-@font-face {
-  font-family: KievitWebPro;
-  src: url("KievitWebPro.woff") format("woff");
-}
-
-/* first for IE 4–8 */
-@font-face {
-  font-family: KievitWebPro;
-  src: url("KievitWebPro-Ita.eot");
-  font-weight: normal;
-  font-style: italic;
-}
-
-/* then for WOFF-capable browsers */
-@font-face {
-  font-family: KievitWebPro;
-  src: url("KievitWebPro-Ita.woff") format("woff");
-  font-weight: normal;
-  font-style: italic;
-}
-
-/* first for IE 4–8 */
-@font-face {
-  font-family: KievitWebPro;
-  src: url("KievitWebPro-Bold.eot");
-  font-weight: bold;
-  font-style: normal;
-}
-
-/* then for WOFF-capable browsers */
-@font-face {
-  font-family: KievitWebPro;
-  src: url("KievitWebPro-Bold.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-font-family: entypo;
-src: url('../assets/fonts/entypo.ttf'),
-     url('../assets/fonts/entypo.eot'); /* IE9 */
--webkit-font-smoothing: antialiased;
-}
-
-@font-face {
-font-family: entypo-social;
-src: url('../assets/fonts/entypo-social.ttf'),
-     url('../assets/fonts/entypo-social.eot'); /* IE9 */
--webkit-font-smoothing: antialiased;
-}
+@import "reset";
+@import "fonts";
+@import "variables";
+@import "typography";
 
 /* Toast Framework - type.css */
 body {
