--- a/style/sass/_typography.scss
+++ b/style/sass/_typography.scss
@@ -1,8 +1,13 @@
+html {
+	font-size: 16px;
+	// Set the base font value, then base all sizes on this using rem
+	// instead of em (keeps scaling easier and in relation to each other)
+}
+
 p {
-	font-size: 1em;
-	line-height: 1.5em;
+	font-size: 1rem;
+	line-height: 1.5;
 	color: $gray;
-	margin-bottom: 1.5em;
 	font-weight: normal;
 }
 
@@ -11,7 +16,7 @@ strong {
 	font-weight: normal;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h4, h5, h6 {
 	color: $purple;
 	-webkit-font-smoothing: antialiased;
 	text-align: center;
@@ -19,39 +24,36 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2.4em;
-    line-height: 1em;
-    margin-bottom: .5em;
+    font-size: 4rem;
+		letter-spacing: -1px;
+    line-height: 1.1;
+		margin: 0;
+		text-align: left;
 }
 h2 {
-    font-size: 2em;
-    line-height: 1.3em;
-    margin-top: 1.5em;
-    margin-bottom: .3em;
+    font-size: 2rem;
+    line-height: 1;
 }
 h3 {
-    font-size: 1.1em;
+    font-size: 1.3rem;
    	color: $light-gray;
-    line-height: 1.4em;
+    line-height: 1.4;
     -webkit-margin-before: 0;
 }
 h4 {
-	font-size: 1.2em;
-	line-height: 1.5em;
+	font-size: 1.2rem;
+	line-height: 1.5;
 
 }
 h5 {
-    font-size: 1.125em;
-    line-height: 1.6em;
-    margin-bottom: 1.5em;
+    font-size: 1.125rem;
+    line-height: 1.6;
     text-align: left;
 }
 h6 {
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: normal;
-    line-height: 1.2em;
-    margin-top: 1.4em;
-    margin-bottom: .7em;
+    line-height: 1.2;
     color: $blue-violet;
     text-align: center;
 }
