Move footer styles to separate partial

--- a/style/sass/_homepage.scss
+++ b/style/sass/_homepage.scss
@@ -138,6 +138,7 @@
 // End Sample section styling
 
 // Begin Quote section styling
+// TODO: fade-in-fade-out this section
 .quotes {
 	height: 300px;
 	margin-top: .5em;
