--- a/style/sass/base.scss
+++ b/style/sass/base.scss
@@ -5,6 +5,7 @@
 @import "variables";
 @import "typography";
 @import "homepage";
+@import "footer";
 @import "oldstyle"; // will be removed once everything's been separated out
 
 // Base styles
