Sassify footer partial

--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -1,35 +1,31 @@
-img.about {
-	width: 75px !important;
-	margin-top: 20px;
-	margin-bottom: 5px;
-	-moz-border-radius: 75px;
-	-webkit-border-radius: 75px;
-	-khtml-border-radius: 75px;
-	border-radius: 75px;
-}
-
 .footer {
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
-
-.footer ul {
-	width: 100%;
-	display: inline-block;
-	list-style-type: none;
-	float: left;
-	padding: 0;
-}
-
-.footer li {
-	vertical-align: top;
-	display: inline-block;
-	padding: 0 10px 0 10px;
-}
-
-.footer li img {
-	display: block;
-	text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  ul {
+    display: inline-block;
+    float: left;
+    list-style-type: none;
+    padding: 0;
+  	width: 100%;
+    li {
+    	display: inline-block;
+    	padding: 0 10px 0 10px;
+      vertical-align: top;
+      img {
+      	display: block;
+      	text-align: center;
+        .about {
+        	-moz-border-radius: 75px;
+        	-webkit-border-radius: 75px;
+        	-khtml-border-radius: 75px;
+        	border-radius: 75px;
+          margin-top: 20px;
+          margin-bottom: 5px;
+          width: 75px !important;
+        }
+      }
+    }
+  }
 }
 
 .footnote {
@@ -38,20 +34,19 @@ img.about {
 	padding-left: 0;
 	padding-right: 0;
 	text-align: center;
+  p {
+  	width: 60%;
+  	font-size: .8em;
+  	text-align: center;
+  	display: inline-block;
+  	margin-bottom: .5em;
+  }
+  .light a {
+  	color: $blue-gray;
+  }
 }
 
-.footer p {
-	width: 60%;
-	font-size: .8em;
-	text-align: center;
-	display: inline-block;
-	margin-bottom: .5em;
-}
-
-.light a {
-	color: #adb7c0;
-}
-
+// Not currently in index.html
 .socialfooter {
 	margin-top: 0;
 	width: 100%;
