--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -7,6 +7,7 @@ $green: #BCD5A2;
 $gray: #69717b;
 $dark-gray: #697480;
 $light-gray: #A2A1B0;
+$blue-gray: #ADB7C0;
 $warm-gray: #fafafc;
 $white: #FFFFFF;
 
