Move subscribe to base.scss and add border-gray to variables

--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -9,6 +9,7 @@ $dark-gray: #697480;
 $light-gray: #A2A1B0;
 $blue-gray: #ADB7C0;
 $warm-gray: #fafafc;
+$border-gray: #E2E3E4;
 $white: #FFFFFF;
 
 // Fonts
